Add table settings

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,3 +204,17 @@ pre {
         }
     }
 }
+
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: 1px solid #000000;
+}
+
+th{
+    border: 1px solid #000000;
+}
+
+td{
+    border: 1px solid #000000;
+}
